# fhe-study

./: Cargo.toml  README.md
arith/: Cargo.toml  README.md
arith/sage/: ring.sage
arith/src/: complex.rs  lib.rs  matrix.rs  naive_ntt.rs  ntt.rs  ntt_u62.rs  ntt_u64.rs  ring.rs  ring_n.rs  ring_nq.rs  ring_torus.rs  ringq.rs  torus.rs  traits.rs  tuple_ring.rs  zq.rs
arithmetic/: Cargo.toml  README.md
arithmetic/src/: lib.rs  naive.rs  naive_ntt.rs  ntt.rs  ring.rs  ringq.rs  zq.rs
bfv/: Cargo.toml
bfv/src/: lib.rs
ckks/: Cargo.toml
ckks/src/: encoder.rs  lib.rs
generalized-fhe/: Cargo.toml  README.md
generalized-fhe/src/: glwe.rs  lib.rs
gfhe/: Cargo.toml  README.md
gfhe/src/: glev.rs  glwe.rs  lib.rs
tfhe/: Cargo.toml
tfhe/src/: lib.rs  tggsw.rs  tglwe.rs  tgsw.rs  tlev.rs  tlwe.rs
