[package]
name = "arith"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

# TMP: the next 4 imports are TMP, to solve systems of linear equations. Used
# for the CKKS encoding step, probably remvoed once in ckks the encoding is done
# as in 2018-1043 or 2018-1073.
num = "0.4.3"
num-complex = "0.4.6"
ndarray = "0.16.1"
ndarray-linalg = { version = "0.17.0", features = ["intel-mkl"] }
